# OpenLogging

./: .gitignore  CMakeLists.txt  OpenLogging.hpp  README.md  \  test.cpp  todo
include/: Constants.h  OpenLogging.h  OpenLogging.ipp
include/Constants/: Constants.h
include/Helpers/: Helpers.h  Math.h  Numeric.h  Print.h  String.h  Templating.h
include/Structures/: Structures.h
